# stark

./: .gitattributes  CMakeLists.txt  README.md  TODO.md
scripts/: get_source_code.py  test_bs.py
src/: attribute.h  basic_dom_parser.cpp  basic_dom_parser.h  constants.h  dom_node.cpp  dom_node.h  named_character_ref.h  simd_utils.cpp  simd_utils.h  stark.cpp  stark.h  tag_utils.cpp  tag_utils.h  test_utils.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokenizer_state.h  ts_queue.h  utils.cpp  utils.h
tests/: test_basic_dom_parser.cpp  test_dom_node_integration.cpp  test_stark.cpp  test_tokenizer.cpp
tests/input/: george_bush.html  george_bush_num_chars_rem.html  hn.html  hn.tokens  simple.html  simple.tokens
